<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_home">My Board</string>
    <string name="title_dashboard">New Reminder</string>
    <string name="title_notifications">Notifications</string>
    <string name="remember_question">What do you want to remember to do?</string>
    <string name="take_my_pill">Take my pill</string>
    <string name="when_question">When do you want to it?</string>
    <string name="time_question">At what time?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="set_time">Set Time</string>
    <string name="done_button">DONE</string>
</resources>